--- a/public/styles/config.css
+++ b/public/styles/config.css
@@ -1,4 +1,4 @@
-.config {
+snake-config {
     width: min(600px, 100%);
 
     padding: 30px;
@@ -12,7 +12,7 @@
                  -20px -20px 60px #262b2f;
 }
 
-.config > input {
+snake-config > input {
     height: 40px;
 
     outline: none;
@@ -26,22 +26,22 @@
     color: var(--font-color);
 }
 
-.config > input:not(:first-child) {
+snake-config > input:not(:first-child) {
     margin-top: 20px;
 }
 
-.config > input[type=text] {
+snake-config > input[type=text] {
     border: 1px solid #fff;
     border-width: 0 0 1px 0;
 
     transition: border-color 0.5s;
 }
 
-.config > input[type=text]:focus {
+snake-config > input[type=text]:focus {
     border-color: #aaa;
 }
 
-.config > input[type=submit] {
+snake-config > input[type=submit] {
     border-radius: 20px;
     background: var(--bg-color);
 
@@ -50,6 +50,6 @@
     transition: background 0.2s;
 }
 
-.config > input[type=submit]:hover {
+snake-config > input[type=submit]:hover {
     background: #495057;
 }
