--- a/public/styles/game.css
+++ b/public/styles/game.css
@@ -1,4 +1,4 @@
-.game {
+snake-game {
     width: 100%;
     height: 100%;
 
@@ -6,6 +6,6 @@
     display: none;
 }
 
-/* .game > canvas {
+/* snake-game > canvas {
     background: #fff;
 } */
